--- a/styles/global.css
+++ b/styles/global.css
@@ -314,11 +314,11 @@ input {
   text-transform: uppercase;
 }
 
-.speaker-badge {
+.moderator-badge {
   border: 1px solid #e9a944;
 }
 
-.moderator-badge {
+.contributor-badge {
   border: 1px solid #4e8ff7;
 }
 
